Add CORS handling in server

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 wagtail = "<2.8,>=2.7"
 Django = ">=2.2,<2.3"
+django-cors-headers = "==3.2.1"
 
 [requires]
 python_version = "3.8"
