--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,9 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-wagtail = "<2.8,>=2.7"
-Django = ">=2.2,<2.3"
-django-cors-headers = "==3.2.1"
+wagtail = "<2.10,>=2.9"
+Django = "<3.1,>=3.0"
+django-cors-headers = "<3.4,>=3.3"
 
 [requires]
 python_version = "3.8"
