--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,9 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-wagtail = "<2.10,>=2.9"
-Django = "<3.1,>=3.0"
-django-cors-headers = "<3.4,>=3.3"
+wagtail = "<3.0,>=2.9"
+Django = "<4.0,>=3.0"
+django-cors-headers = "<4.0,>=3.3"
+libsass = "<1.0,>=0.20"
+django-compressor = "<3.0,>=2.4"
+django-sass-processor = "<1.0,>=0.8"
 
 [requires]
 python_version = "3.8"
