--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-cors-headers = "<4.0,>=3.3"
 libsass = "<1.0,>=0.20"
 django-compressor = "<3.0,>=2.4"
 django-sass-processor = "<1.0,>=0.8"
+django-bulma = "<1.0,>=0.8"
 
 [requires]
 python_version = "3.8"
